Squash bugs

--- a/src/styles/streamhub-input.less
+++ b/src/styles/streamhub-input.less
@@ -133,6 +133,7 @@
 .lf-editor-upload {
     float: left;
     margin: 5px;
+    padding: 7px 0;
 }
 
 .lf-editor-upload > .fycon-composer-photo:before {
